[package]
name = "poc"
version = "0.1.0"
authors = ["Vilda-PC <vildapavlicek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.1"
bracket-terminal = "0.8.1"
bracket-pathfinding = "0.8.1"
legion = "0.2.4"